--- a/styles.css
+++ b/styles.css
@@ -63,10 +63,12 @@ body {
 .button {
     color: #f9faf8; 
     background-color: #3882f6;
-    width: 120px;
+    width: 130px;
     text-align: center;
-    padding: 10px;
-    border-radius: 5%;
+    font-weight: bold;
+    font-size: 18px;
+    padding: 8px;
+    border-radius: 6px;
 }
 
 .section-2 {
@@ -108,5 +110,84 @@ body {
     font-weight: bold;
     font-size: 18px;
 }
+
+.section-3 {
+    background-color: #e5e7eb;
+    padding-top: 50px;
+    padding-bottom: 60px;
+}
+
+.quote-container {
+    margin: 0 22% 0; 
+    display: flex;
+    flex-direction: column;
+}
+
+.paragraph p {
+    font-size: 36px; 
+    color: #1f2937;
+    font-style: italic;
+}
+
+.name {
+    align-self: flex-end;
+}
+
+.name p {
+    font-size: 24px;
+    font-weight: bold;
+    padding: 12px;
+}
+
+.section-4 {
+    background-color: white;
+    padding-top: 90px;
+    padding-bottom: 120px;
+}
+
+.contact-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin: 0 15% 0;
+    background-color: #3882f6;
+    padding: 50px;
+    border-radius: 5px;
+}
+
+.contact h2 {
+    color: #e5e7eb;
+    font-size: 25px;
+    font-weight: bold;
+}
+
+.contact p {
+    color: #e5e7eb;
+    font-size: 18px;
+}
+
+.contact-button {
+    border: 2px solid #e5e7eb;
+    border-radius: 6px;
+    font-size: 18px;
+    padding: 6px;
+    color: #e5e7eb;
+    width: 130px;
+    text-align: center;
+    font-weight: bold;
+}
+
+.footer {
+    background-color: #1f2937;
+    padding-top: 40px;
+    padding-bottom: 40px;
+}
+
+.footer p {
+    color: white;
+    font-size: 20px;
+    text-align: center;
+}
+
 
 
